resolved merge conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-<<<<<<< HEAD
 # Python Environments
-venv/
-.venv/
 __pycache__/
 *.pyc
 
@@ -13,7 +10,7 @@ out/
 # Environment Variables
 .env
 .env.local
-=======
+lpr-dashboard/.env.local
 # Python
 __pycache__/
 *.pyc
@@ -36,4 +33,3 @@ kaggle.json
 /notebooks/runs
 
 app/
->>>>>>> 2878b72d9930b688ffa560146bd3fa4c4285c753
