--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -30,6 +30,5 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "exclude": ["node_modules"],
-  "plugins": ["tw-animate-css"]
+  "exclude": ["node_modules"]
 }
